--- a/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
+++ b/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
@@ -11,7 +11,8 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-info">Profile</button>
+
+                <button id="logout" type="submit" class="nav-link btn btn-link text-info"><i class="fas fa-user"></i></button>
         </form>
     </li>
     <li class="nav-item">
