--- a/SeneakerKop/wwwroot/css/site.css
+++ b/SeneakerKop/wwwroot/css/site.css
@@ -17,10 +17,23 @@ html {
   min-height: 100%;
 }
 
+
 body {
     margin-bottom: 60px;
     font-family: 'Oswald', sans-serif;
+    background: url("/images/EpDpS0VW4AErWZE.jpg");
+    background-size:contain;
 }
+
+.productDiv{
+    border-style:inset;
+}
+
+.prodImage{
+    height:50vh;
+}
+
+
 
 .loginContainer{
     margin:auto;
@@ -43,8 +56,51 @@ body {
     
 }
 
-@media screen and (min-width:992px){
-    .navbar {
-        padding: .5rem;
+@media screen and (max-width:991px){
+
+    body{
+        background:url("/images/pexels-jordan-hyde-1032110.jpg");
+        background-size:cover;
+    }
+
+    .loginText{
+        font-size: 2rem;
+        color:white;
+    }
+    .form-floating{
+        margin-top:3rem;
+    }
+
+    .checkbox{
+        margin-bottom:2rem;
     }
 }
+
+@media screen and (min-width:992px){
+    .carousel-inner{
+        height:80vh;
+    }
+
+
+    .navbar-brand {
+        margin-left: -5rem;
+        margin-right: 20rem;
+    }
+}
+
+
+.carousel {
+    display: flex;
+    overflow: hidden;
+}
+
+.carousel-item {
+    flex: 0 0 100%;
+}
+
+    .carousel-item img {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+    }
+
