Changed menu to icons

--- a/SeneakerKop/Pages/Shared/_DashboardPartial.cshtml
+++ b/SeneakerKop/Pages/Shared/_DashboardPartial.cshtml
@@ -11,11 +11,11 @@
         if (roles.Contains("Customer"))
         {
             <li class="nav-item">
-                <a class="nav-link text-danger" asp-area="" asp-page="/Privacy">Customer Option 1</a>
+                <a class="nav-link text-danger" asp-area="" asp-page="/Privacy">Customer 1</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link text-danger" asp-area="" asp-page="/Privacy">Customer Option  2 </a>
+                <a class="nav-link text-danger" asp-area="" asp-page="/Privacy">Customer 2 </a>
             </li>
         }
         else if (roles.Contains("Admin"))
