--- a/SeneakerKop/Pages/Shared/_Layout.cshtml
+++ b/SeneakerKop/Pages/Shared/_Layout.cshtml
@@ -26,17 +26,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-danger" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-danger" asp-area="" asp-page="/Index"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-danger" asp-area="" asp-page="/Shop">Shop</a>
+                            <a class="nav-link text-danger" asp-area="" asp-page="/Shop/Shop"><i class="fa fa-shopping-basket fa-lg" aria-hidden="true"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-danger " asp-area="" asp-page="/Info/Contact">Contact Us</a>
+                            <a class="nav-link text-danger " asp-area="" asp-page="/Info/Contact"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link text-danger " asp-area="" asp-page="/Info/About">About Us</a>
+                            <a class="nav-link text-danger " asp-area="" asp-page="/Info/About"><i class="fa fa-question-circle fa-lg" aria-hidden="true"></i></a>
                         </li>
                         <partial name="_DashboardPartial" />
                     </ul>
@@ -53,7 +53,7 @@
 
     <footer class="border-top footer text-muted text-center">
         <div class="container">
-            &copy; 2023 - SeneakerKop
+            &copy; 2023 - SeneakerKop- Tsotetsi Moeketsi
         </div>
     </footer>
 
