--- a/SeneakerKop/Pages/snks/Create.cshtml
+++ b/SeneakerKop/Pages/snks/Create.cshtml
@@ -8,27 +8,27 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Sneaker.ImageTitle" class="control-label"></label>
+                <label asp-for="Sneaker.ImageTitle" class="control-label text-info"></label>
                 <input asp-for="Sneaker.ImageTitle" class="form-control" />
                 <span asp-validation-for="Sneaker.ImageTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sneaker.Name" class="control-label"></label>
+                <label asp-for="Sneaker.Name" class="control-label text-info"></label>
                 <input asp-for="Sneaker.Name" class="form-control" />
                 <span asp-validation-for="Sneaker.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sneaker.Description" class="control-label"></label>
+                <label asp-for="Sneaker.Description" class="control-label text-info"></label>
                 <input asp-for="Sneaker.Description" class="form-control" />
                 <span asp-validation-for="Sneaker.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sneaker.Price" class="control-label"></label>
+                <label asp-for="Sneaker.Price" class="control-label text-info"></label>
                 <input asp-for="Sneaker.Price" class="form-control" />
                 <span asp-validation-for="Sneaker.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Sneaker.Quantity" class="control-label"></label>
+                <label asp-for="Sneaker.Quantity" class="control-label text-info"></label>
                 <input asp-for="Sneaker.Quantity" class="form-control" />
                 <span asp-validation-for="Sneaker.Quantity" class="text-danger"></span>
             </div>
