--- a/SeneakerKop/Pages/Info/Contact.cshtml
+++ b/SeneakerKop/Pages/Info/Contact.cshtml
@@ -5,5 +5,6 @@
 
 <div class="text-center">
     <h1>Reach out to us here</h1>
-    <p>Some Contact Info Here</p>
+    <i class="fa fa-voicemail"></i>
+    <p class="text-capitalize text-info"><span class="">Email: </span>tmoeketsid@gmail.com</p>
 </div>
