--- a/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
+++ b/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
@@ -7,13 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a id="manage" class="nav-link text-info" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-
-                <button id="logout" type="submit" class="nav-link btn btn-link text-info"><i class="fas fa-user"></i></button>
-        </form>
+            <a id="manage" class="nav-link text-info" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"> <i class="fas fa-user fa-lg"></i></a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
