Redesigned the register and login icons

--- a/SeneakerKop/Pages/Info/Contact.cshtml
+++ b/SeneakerKop/Pages/Info/Contact.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1>Reach out to us here</h1>
-    <i class="fa fa-voicemail"></i>
-    <p class="text-capitalize text-info"><span class="">Email: </span>tmoeketsid@gmail.com</p>
+    <h1 class="text-info">Reach Out To Us Here</h1>
+    <i class="fa fa-info-circle fa-2x"></i>
+    <p class="text-capitalize text-info"><span class=""><i class="fa fa-envelope-circle-check fa-lg"></i> </span>tmoeketsid@gmail.com</p>
 </div>
