--- a/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
+++ b/SeneakerKop/Pages/Shared/_LoginPartial.cshtml
@@ -18,10 +18,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-info" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link text-info" id="register" asp-area="Identity" asp-page="/Account/Register" alt="register"><i class="fa fa-registered"></i></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-info" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link text-info" id="login" asp-area="Identity" asp-page="/Account/Login" alt="login"><i class="fa fa-sign-in fa-lg"></i></a>
     </li>
     
 }
