--- a/SeneakerKop/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SeneakerKop/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,10 +7,10 @@
 
 
 <div class="row ">
-    <div class="col-md-4 loginContainer">
+    <div class="col-md-4 loginContainer mt-5">
         <section>
             <form id="account" method="post">
-                <h2 class="loginText text-center">Login</h2>
+                <h2 class="loginText text-center text-white"><i class="fa fa-sign-in fa-lg"></i></h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
