--- a/SeneakerKop/Pages/Shared/_Layout.cshtml
+++ b/SeneakerKop/Pages/Shared/_Layout.cshtml
@@ -52,8 +52,8 @@
     </div>
 
     <footer class="border-top footer text-muted text-center">
-        <div class="container">
-            &copy; 2023 - SeneakerKop- Tsotetsi Moeketsi
+        <div class="container text-danger">
+            &copy; 2023 - SeneakerKop-Tsotetsi Moeketsi
         </div>
     </footer>
 
