--- a/SeneakerKop/Pages/Shop/ProdDetails.cshtml
+++ b/SeneakerKop/Pages/Shop/ProdDetails.cshtml
@@ -1,19 +1,50 @@
 ﻿@page
 @model SeneakerKop.Pages.ProductDetailsModel
 @{
-    var qrt = Model.Sneaker.Quantity;
+    var ImagePath = "~/images/" + Model.Sneaker.ImageTitle;
 }
 
-<div class="container">
-    <ul>
-    @for (int i=0;i<qrt;i++)
-    {
-        
-            <li>@i</li>
-       
-      
-    }
+<form>
+    <div class="text-center">
 
-    </ul>
-</div>
+        <div class="card w-25 bg-black mb-3">
+            <img src=@ImagePath class="w-100 prodImage card-img-top" asp-append-version="true" />
+
+            <div class="card-body">
+                <p class="text-info">Name:@Model.Sneaker.Name</p>
+                <p class="text-info">Price : R @Model.Sneaker.Price</p>
+                <label for="quantity" class="form-label text-info">Quantity:</label>
+                <select asp-for="SelectedQuantity" class="w-25 mb-4">
+                    @for (int i = 1; i <= Model.Quantity; i++)
+                    {
+                        <option value="@i">@i</option>
+                    }
+                </select>
+                <br/>
+
+                <a class="btn btn-outline-danger" asp-area="" asp-page="">Add To Cart</a>
+
+
+            </div>
+           
+
+        </div>
+        <div>
+            <p>klhskhslkhslskhlkdhlkdhlkdhdlkhdkldddlk</p>
+
+        </div>
+        
+    </div>
+
+    
+</form>
+
+
+
+
+
+
+
+
+
 
