--- a/SeneakerKop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SeneakerKop/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-4 loginContainer">
         <form id="registerForm text-center" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2 class="text-center">Create A New Account</h2>
+            <h2 class="text-center text-primary">Create A New Account</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating mt-3">
