--- a/SeneakerKop/Pages/Shared/_DashboardPartial.cshtml
+++ b/SeneakerKop/Pages/Shared/_DashboardPartial.cshtml
@@ -21,7 +21,7 @@
         else if (roles.Contains("Admin"))
         {
             <li class="nav-item">
-                <a class="nav-link text-danger" asp-area="" asp-page="/snks/Create">Create New Product</a>
+                <a class="nav-link text-danger" asp-area="" asp-page="/snks/Create"><i class="fa fa-warehouse fa-lg"></i></a>
             </li>
 
             <li class="nav-item">
