--- a/SeneakerKop/Pages/Shared/_Layout.cshtml
+++ b/SeneakerKop/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SeneakerKop.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/font-awesome/css/all.min.css" />
+    <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
 
 
 </head>
@@ -18,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-danger bg-black border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SeneakerKop</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="~/images/sneakerlogoblue.png" class="logo" /></a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
