--- a/SeneakerKop/wwwroot/css/site.css
+++ b/SeneakerKop/wwwroot/css/site.css
@@ -74,6 +74,8 @@ body {
     .checkbox{
         margin-bottom:2rem;
     }
+
+    
 }
 
 @media screen and (min-width:992px){
@@ -83,8 +85,14 @@ body {
 
 
     .navbar-brand {
-        margin-left: -5rem;
-        margin-right: 30rem;
+        margin-left: -4rem;
+        margin-right: 35rem;
+    }
+
+    .logo {
+        width: 100%;
+        height: 7vh;
+        border-radius: 50%;
     }
 }
 
@@ -92,6 +100,7 @@ body {
 .carousel {
     display: flex;
     overflow: hidden;
+    border-radius:.7rem;
 }
 
 .carousel-item {
