--- a/SeneakerKop/wwwroot/css/site.css
+++ b/SeneakerKop/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 
 html {
@@ -20,9 +20,9 @@ html {
 
 body {
     margin-bottom: 60px;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Nova Square', sans-serif;
     background: url("/images/EpDpS0VW4AErWZE.jpg");
-    background-size:contain;
+    background-size: contain;
 }
 
 .productDiv{
