--- a/SeneakerKop/Pages/Shop/Cart.cshtml
+++ b/SeneakerKop/Pages/Shop/Cart.cshtml
@@ -40,7 +40,7 @@
                         <td>@item.Quantity</td>
                         <td>@(item.Price * (int)item.Quantity)</td>
                         <td>
-                            <form method="post">
+                            <form method="post" asp-page-handler="RemoveItemFromCart" method="post">
                                 <input type="hidden" name="removeProductId" value="@item.SneakerId" />
                                 <button class="btn btn-danger w-100">Remove</button>
                             </form>
