--- a/SeneakerKop/Pages/Shop/Cart.cshtml
+++ b/SeneakerKop/Pages/Shop/Cart.cshtml
@@ -1,69 +1,170 @@
-﻿@page 
+﻿@page
 @model SeneakerKop.Pages.Shop.CartModel
+
 @{
+    double totalSum = 0;
+    double shipping = 0;
+    double grandTotal = 0;
+
+    if (Model != null && Model.Cart != null && Model.Cart.CartItems != null && Model.Cart.CartItems.Any())
+    {
+        totalSum = Model.Cart.CartItems.Sum(item => item.Price * (int)item.Quantity);
+        shipping = totalSum < 1000 ? 200 : 0;
+        grandTotal = totalSum + shipping;
+    }
 }
+
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-8">
+            @if (Model != null && Model.Cart.CartItems != null && Model.Cart.CartItems.Any())
+            {
+                @foreach (var item in Model.Cart.CartItems)
+                {
+                    var ImagePath = "/images/" + item.Image;
+
+                    <div class="card mb-4">
+                        <div class="row no-gutters">
+                            <div class="col-md-4 d-flex align-items-center justify-content-center">
+                                <div class="image-container">
+                                    <img src="@ImagePath" alt="@item.ProductName" class="card-img cart-item-image">
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.ProductName</h5>
+                                    <p class="card-text">Price: $@item.Price</p>
+                                    <div class="quantity-input">
+                                        <button class="btn btn-sm btn-secondary quantity-btn" onclick="updateQuantity('@item.SneakerId', -1, @item.AvailableStock)">-</button>
+                                        <input type="number" class="quantity-number" name="@item.SneakerId" value="@item.Quantity" min="1" max="@item.AvailableStock" onchange="updateQuantity('@item.SneakerId', this.value - @item.Quantity, @item.AvailableStock)" />
+                                        <button class="btn btn-sm btn-secondary quantity-btn" onclick="updateQuantity('@item.SneakerId', 1, @item.AvailableStock)">+</button>
+                                    </div>
+                                    <p class="card-text font-weight-bold">Total: R @(item.Price * (int)item.Quantity)</p>
+                                    <form method="post" asp-page-handler="RemoveItemFromCart">
+                                        <input type="hidden" name="removeProductId" value="@item.SneakerId" />
+                                        <button class="btn btn-danger btn-block">Remove</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+            else
+            {
+                <p class="text-center">Your cart is empty.</p>
+            }
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">Cart Summary</h5>
+                    <p class="card-text cart-summary-total">Total: R @totalSum</p>
+                    <p class="card-text cart-summary-shipping">Shipping: R @shipping</p>
+                    <hr>
+                    <p class="card-text font-weight-bold cart-summary-grand-total">Grand Total: R @grandTotal</p>
+                    <form method="post" asp-page-handler="Checkout">
+                        @foreach (var item in Model.Cart.CartItems)
+                        {
+                            <input type="hidden" name="updatedQuantities[@item.SneakerId]" value="@item.Quantity" />
+                        }
+                        <button type="submit" class="btn btn-primary btn-block">Checkout</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+
+    function updateQuantity(productId, change, availableStock) {
+        const quantityInput = document.querySelector(`input[name="${productId}"]`);
+        let newQuantity = parseInt(quantityInput.value) + change;
+
+        // Prevent decreasing below 1 and exceeding available stock
+        if (newQuantity < 1) {
+            newQuantity = 1;
+        } else if (newQuantity > availableStock) {
+            newQuantity = availableStock;
+        }
+
+        quantityInput.value = newQuantity;
+
+        // Update the displayed total price for the item
+        const itemPrice = parseFloat(quantityInput.closest('.card-body').querySelector('.card-text').textContent.replace('Price: $', ''));
+        const newTotalPrice = itemPrice * newQuantity;
+        quantityInput.closest('.card-body').querySelector('.font-weight-bold').textContent = `Total: $${newTotalPrice}`;
+
+        // Update hidden input value for updated quantity
+        const updatedQuantityInput = document.querySelector(`input[name="updatedQuantities[${productId}]"]`);
+        updatedQuantityInput.value = newQuantity;
+
+        // Update values in the cart summary
+        updateCartSummary();
+    }
+
+
+    function updateCartSummary() {
+        let newTotalSum = 0;
+
+        // Loop through each item in the cart to calculate the new total
+        const cartItems = document.querySelectorAll('.card');
+        cartItems.forEach(item => {
+            const quantityInput = item.querySelector('.quantity-number');
+            const itemPriceElement = item.querySelector('.card-text');
+            if (quantityInput && itemPriceElement) {
+                const itemPrice = parseFloat(itemPriceElement.textContent.replace('Price: $', ''));
+                const newQuantity = parseInt(quantityInput.value);
+                const itemTotalPrice = itemPrice * newQuantity;
+                newTotalSum += itemTotalPrice;
+            }
+        });
+
+        const newShipping = newTotalSum < 1000 ? 200 : 0;
+        const newGrandTotal = newTotalSum + newShipping;
+
+        // Update values in the cart summary
+        const summaryTotal = document.querySelector('.cart-summary-total');
+        const summaryShipping = document.querySelector('.cart-summary-shipping');
+        const summaryGrandTotal = document.querySelector('.cart-summary-grand-total');
+
+        if (summaryTotal && summaryShipping && summaryGrandTotal) {
+            summaryTotal.textContent = `Total: $${newTotalSum}`;
+            summaryShipping.textContent = `Shipping: $${newShipping}`;
+            summaryGrandTotal.textContent = `Grand Total: $${newGrandTotal}`;
+        }
+    }
+
+</script>
+
+ 
 
 
 
 <style>
     /* Custom styles */
-    .custom-table {
-        background-color: #000000; /* Set a dark black background */
-        border: 1px solid; /* Add a border */
-        border-radius: 20px; /* Set border radius for more circular corners */
+    .cart-item-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
-    .custom-text-color {
-        color: #ff0000; /* Set a red text color */
+    .image-container {
+        width: 150px; /* Set desired width */
+        height: 150px; /* Set desired height */
+        overflow: hidden;
+        border-radius: 10px;
     }
+
+    .card {
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease-in-out;
+    }
+
+        .card:hover {
+            transform: translateY(-5px);
+        }
 </style>
-
-<div class="container mt-5">
-    <table class="table table-bordered custom-table border border-danger">
-        <thead class="thead-dark">
-            <tr class="text-danger">
-                <th scope="col">Product Name</th>
-                <th scope="col">Price</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
-                <th scope="col">Actions</th>
-            </tr>
-        </thead>
-        <tbody class="text-danger">
-            @if (Model != null && Model.Cart.CartItems != null)
-            {
-                @foreach (var item in Model.Cart.CartItems)
-                {
-                    <tr class="text-danger">
-                        <td>@item.ProductName</td>
-                        <td>@item.Price</td>
-                        <td>@item.Quantity</td>
-                        <td>@(item.Price * (int)item.Quantity)</td>
-                        <td>
-                            <form method="post" asp-page-handler="RemoveItemFromCart" method="post">
-                                <input type="hidden" name="removeProductId" value="@item.SneakerId" />
-                                <button class="btn btn-danger w-100">Remove</button>
-                            </form>
-                        </td>
-                    </tr>
-                }
-
-                <!-- Calculate and display total sum -->
-                <tr class="text-danger">
-                    <td colspan="3"></td>
-                    <td class="font-weight-bold">Total Sum:</td>
-                    <td class="font-weight-bold">
-                       R @{
-                            double sum = Model.Cart.CartItems.Sum(item => item.Price * (int)item.Quantity);
-                            @sum
-                        }
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
-
-
-
-
