Added stripe as a payment gateway

--- a/SeneakerKop/Pages/Pay/Checkout.cshtml
+++ b/SeneakerKop/Pages/Pay/Checkout.cshtml
@@ -1,6 +1,14 @@
 ﻿@page
 @model SeneakerKop.Pages.Pay.CheckoutModel
 @{
+    
 }
 
-<h1>Checkout page</h1>
+
+<form asp-page-handler="Checkout" method="post">
+    <button type="submit" class="btn btn-primary btn-block">Checkout</button>
+
+</form>
+
+
+
