--- a/SeneakerKop/Pages/Shared/_Layout.cshtml
+++ b/SeneakerKop/Pages/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/SeneakerKop.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/font-awesome/css/all.min.css" />
     <link rel="icon" href="~/favicon.ico" type="image/x-icon" />
+    <script src="https://js.stripe.com/v3/"></script>
 
 
 </head>
